--- a/exercice3.html
+++ b/exercice3.html
@@ -1,20 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
         <head>
                 <meta charset="utf-8">
                 <title>Pense Bête</title>
         </head>
         <body>
-		<b><font size="+3">Ma liste de course du 7 Mai 2016</b></font>>
-		
+		<h1><b><font size="+3">Ma liste de course du 7 Mai 2016</h1></b></font>
 		<p>Il me faut plusieurs choses :</p>
-		
 		<ul>
-		<li> Une baguette</li>
-		<li>2 <font color="red">kilos</font> de tomates</li>
-		<li>3 <font color="green">litres</font> de lait</li>
-		<li>5 <b>boites</b> de chewing gum</li>
+  		<li>Une baguette</li>
+  		<li>2 <span style="color: red;">kilos</span> de tomates</li>
+  		<li>3 <span style="color: green;">litres</span> de lait</li>
+  		<li>5 <strong>boites</strong> de chewing gum</li>
 		</ul>
-		<i>Payer en liquide ou par chèque</i>
+    <p style="font-style: italic;">Payer en liquide ou par chèque</p>
 	</body>
 </html>
